<resources>
    <string name="app_name">NMedia</string>
    <string name="logo_descript">Logo</string>
    <string name="imageView_descript" translatable="false">imageView</string>
    <string name="field_name_on_screen">NMedia!!</string>
    <string name="field_name_on_screen_second">NMedia22</string>
    <string name="image_buttom_more_vert">Menu</string>
    <string name="error_empty_content">The data cannot be empty</string>
    <string name="post_text">Enter a post</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_retry">Retry</string>
    <string name="button_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="chooser_share_post">Nmedia_share</string>
    <string name="description_post_save">Description post save</string>
    <string name="simple_description">Simple description</string>
    <string name="add_post">Add post</string>
    <string name="google_play_unavailable">Google play unavailable</string>
    <string name="channel_remote_name">Channel remote name</string>
    <string name="channel_remote_description">Channel remote description</string>
    <string name="error_loading">Error loading</string>
    <string name="error_refresh">Error refresh</string>
    <string name="error_save">Error save</string>
    <string name="error_like">Error likes</string>
    <string name="error_password_confirm">Error password confirm</string>
    <string name="retry_loading">Retry loading</string>
    <string name="menu_refresh">Refresh</string>
    <string name="empty_posts">Empty post</string>
    <string name="empty_content_warning">Content can not be empty</string>
    <string name="buttom_snackbar_txt">Retry</string>
    <string name="clear">Clear</string>
    <string name="description_photo">Description photo</string>
    <string name="picker_error">Pick error</string>
    <string name="recent_entries">Recent Entries</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="error_sign_in">User name not found or incorrect password/login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_retry">Password confirm</string>
    <string name="empty_fields">Fields should not be empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="clear_photo">Clear photo</string>
    <string name="confirm">Confirm</string>
    <string name="snak_auth">Need to be authorized</string>">
    <string name="notification_new">New notification</string>
    <string name="notification_user_liked">User liked the post</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="week_ago">Week ago</string>
</resources>
