<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_layout_activity"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/logoNetology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_layout_activity"
        android:contentDescription="@string/logo_descript"
        app:srcCompat="@drawable/netology"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPoleAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_layout_activity"
        android:layout_marginEnd="@dimen/dimen_layout_activity"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toTopOf="@id/textPolePublished"
        app:layout_constraintEnd_toStartOf="@id/imageMenu"
        app:layout_constraintStart_toEndOf="@id/logoNetology"
        app:layout_constraintTop_toTopOf="@id/logoNetology"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/textPolePublished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/logoNetology"
        app:layout_constraintStart_toStartOf="@id/textPoleAuthor"
        app:layout_constraintTop_toBottomOf="@id/textPoleAuthor"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageMenu"
        style="@style/Widget.App.MenuVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_layout_activity"
        android:contentDescription="@string/image_buttom_more_vert"
        android:minWidth="0dp"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:iconTint="?attr/colorControlNormal"
        app:rippleColor="?attr/colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textPoleAuthor"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_marginTop"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="logoNetology, textPoleAuthor, textPolePublished, imageMenu" />

    <TextView
        android:id="@+id/textPoleHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_marginTop"
        android:autoLink="web"
        android:linksClickable="true"
        app:layout_constraintTop_toBottomOf="@id/barrier_heading"
        tools:text="@sample/posts.json/data/textPublic" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/textPoleUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_marginTop"
        android:linksClickable="true"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/ic_baseline_play_circle_outline_24"
        app:iconGravity="textStart"
        app:iconTint="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPoleHeading"
        tools:ignore="MissingClass" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textPoleUrl" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/imageFavorite"
        style="@style/Widget.App.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_marginTop"
        android:contentDescription="@string/imageView_descript"
        android:minWidth="0dp"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/barrier_body"
        tools:ignore="MissingClass"
        tools:text="@sample/posts.json/data/count_like" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageShare"
        style="@style/Widget.App.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_marginTop"
        android:contentDescription="@string/imageView_descript"
        android:minWidth="0dp"
        android:textColor="?attr/colorControlNormal"
        app:icon="@drawable/ic_baseline_share_24"
        app:iconTint="?attr/colorControlNormal"
        app:rippleColor="?attr/colorControlNormal"
        app:layout_constraintStart_toEndOf="@id/imageFavorite"
        app:layout_constraintTop_toBottomOf="@id/barrier_body"
        app:layout_constraintTop_toTopOf="@id/imageFavorite"
        tools:ignore="MissingClass"
        tools:text="@sample/posts.json/data/count_share" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/imageRedEye"
        style="@style/Widget.App.RedEyeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageView_descript"
        android:minWidth="0dp"
        android:textColor="?attr/colorControlNormal"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:iconTint="?attr/colorControlNormal"
        app:rippleColor="?attr/colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_body"
        app:layout_constraintTop_toTopOf="@id/imageFavorite"
        tools:ignore="MissingClass"
        tools:text="@sample/posts.json/data/count_redeye" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageFavorite, imageShare, imageRedEye" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/barrier_footer" />


</androidx.constraintlayout.widget.ConstraintLayout>
